[package]
name = "minicloze"
description = "A command-line language-learning game"
repository = "https://github.com/benmanone/minicloze/"
readme = "README.md"
authors = ["benman"]
license = "WTFPL"
version = "1.3.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { version="2.6.0", features=["https"] }
rand = "0.8.5"
ring = "0.16.20"
open = "4.1.0"
levenshtein = "1.0.5"
