[package]
name = "minicloze"
description = "A CLI frontend for minicloze"
repository = "https://github.com/benmanone/minicloze/"
readme = "README.md"
authors = ["benman"]
license = "WTFPL"
version = "1.6.0"
edition = "2021"

[dependencies]
minicloze-lib = {version="0.3.0", path="../minicloze-lib/"}
levenshtein = "1.0.5"
colored = "2.0.4"
