[package]
name = "minicloze"
description = "A CLI frontend for minicloze"
repository = "https://github.com/benmanone/minicloze/"
readme = "README.md"
authors = ["benman"]
license = "WTFPL"
version = "1.7.4.1"
edition = "2021"

[dependencies]
minicloze-lib = {version="0.4.4", path="../minicloze-lib/"}
levenshtein = "1.0.5"
terminal-link = "0.1.0"
inline_colorization = "0.1.6"
tokio = {version="1.38.0", features=["macros", "rt-multi-thread"]}
inquire = "0.7.5"
async-recursion = "1.1.1"
