[package]
name = "minicloze-lib"
description = "Backend for minicloze"
repository = "https://github.com/benmanone/minicloze/"
readme = "README.md"
authors = ["benman"]
license = "WTFPL"
version = "0.3.0"
edition = "2021"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { version="2.6.0", features=["https"] }
rand = "0.8.5"
open = "5.0.0"
