[package]
name = "minicloze-lib"
description = "Backend for minicloze"
repository = "https://github.com/benmanone/minicloze/"
readme = "README.md"
authors = ["benman"]
license = "WTFPL"
version = "0.4.5"
edition = "2021"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
select = "0.6.0"
webbrowser = "1.0.1"
futures = "0.3.30"
reqwest = "0.12.5"
